--- a/package.json
+++ b/package.json
@@ -34,5 +34,9 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/microapidev/comment-microapi-demo.git"
+  }
 }
